@@ -1,4 +1,6 @@
 
+  - Add support to enable/disable logging
+
 2008-10-17 - Release Version: 0.2.b.8
   
   - New implementation for is_utf8()
